--- a/motion1.html
+++ b/motion1.html
@@ -17,6 +17,7 @@
     <h3>Terms and Definitions</h3>
     <p><strong>Mandatory Servitude: </strong> Forced to labor or can be known as compulsory servitude; required by law</p>
     <p><strong>Hazard Pay: </strong> Additional money added to the salary</p>
+    <p><strong>TRM: (Total Reward Management): </strong> sort of salary and benefit scheme companies offer employees</p>
   </div>
 
     <div class="arguments">
@@ -37,12 +38,18 @@
     
     <div class="counterarguments">
     <h3>Counterarguments</h3>
-    <p>Anticipate and counter opposition arguments.</p>
+    <p>1 . It’s not just the medical professionals that have a shortage but it's also the financial aid or the hospitals (equipment). To fix one problem it must be remedied by a solution that also fixes the other. According to an article, the backorder for medical equipment actually doubled over the years from an average of 400-500 to 800-1000 units of equipment. </p>
+    <a href="https://www.supplychainbrain.com/blogs/1-think-tank/post/38552-hospitals-face-mounting-s%20%20hortages-of-essential-medical-supplies" target="_blank">Supply Shortages</a>
+    <p>2. Providing the proper education gives more opportunities for most to become medical professionals solving the medical professional shortage. On top of that, importation of medical professionals may provide the same effect. </p>
+    <p>3. There are organizations in place that can sufficiently help against pandemic level crises nullifying the need for government mandated actions Like WHO which even had a major hand in helping countries like the Philippines organize itself against COVID 19</p>
+    <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/interactive-timeline" target="_blank">COVID Timeline</a>
     </div>
 
     <div class="rebuttals">
     <h3>Rebuttals</h3>
-    <p>Rebuttal points against opposition counterarguments.</p>
+    <p>1.  Both can be remedied under mandatory servitude as most of the medical equipment is gonna be easily inspected if different medical professionals are in place. A system where multiple medical professionals can inspect a single workstation could drastically shape what medical standard all of those professionals can work with</p>
+    <p>2. It relies on the fact that the government has to fix another sector it lacks and it doesn’t have an immediate effect to be considered a good solution. There is also not enough incentive for medical professionals outside the country to come to the Philippines to provide aid. </p>
+    <p>3. Those organizations are not government controlled therefore it may be subject to questionable quality of treatment. Some of the organizations also prioritize less wealthy countries therefore the Philippines will not be prioritized as much as struggling countries.</p>
     </div>
   </section>
 
@@ -54,6 +61,7 @@
     <h3>Terms and Definitions</h3>
     <p><strong>Mandatory Servitude: </strong> Forced to labor or can be known as compulsory servitude; required by law</p>
     <p><strong>Hazard Pay: </strong> Additional money added to the salary</p>
+    <p><strong>TRM: (Total Reward Management): </strong> sort of salary and benefit scheme companies offer employees</p>
     </div>
 
     <div class="arguments">
@@ -79,12 +87,19 @@
     
     <div class="counterarguments">
     <h3>Counterarguments</h3>
-    <p>Address government side arguments.</p>
+    <p>1. They might propose to increase the salary but we all know Philippines itself cannot financially, however they might promote to increase the benefits as medical professionals in the working medical field. As mentioned, to those who volunteered during the pandemic will receive free shelter and such, this can imply that the government can give benefits that can help the worker and the family even if its not raising the salary. However, if this falls through, benefits can be limited or to some not worth of the professional’s hard work. Increasing the benefits to some extent can or might convince medical professionals to stay if those said benefits can actually help an individual’s cost of living. </p>
+    <p>2. If a patient from a public hospital cannot be treated well, they can change hospitals and go to a private hospital instead, this can be a counter-argument as when the patient does change hospitals; medical service can be paid off through health card or insurance. Acquiring health card can be useful but the silver lining is that people still need to pay for it with interest, so although it is recommended, it risks the cost of living to the local communities. Another proposal is to importing equipment from other countries yet this is more of a stretch since equipment can be defected upon arrival and can add more debt to the country. </p>
+    <p>3. Burnout causes through a tough work schedule, simply propose that the servitude implemented can be beneficial because they can imply that the work shifts are more tolerable. Accommodations can be part as the benefits in the servitude, making the value in work more prominent as these accommodations can make a person save money or their income. While burnout can take a long-time frame depending the stress of a worker, policy-making for this servitude must be accurate to the needs of both parties, in which both patient and ultimately the medical professionals can benefit in the field. Meaning that they might propose a servitude which is beneficial to all and this can lead to encourage more doctors or nurses to continue studying or work in the medical field.</p>
     </div>
 
     <div class="rebuttals">
     <h3>Rebuttals</h3>
-    <p>Rebuttal points against government counterarguments.</p>
+    <p>1. Some healthcare companies have a TRM philosophy. TRMs are important as it gives value and worth of one’s hard work and effort in exchange of monetary and non-monetary rewards however, companies that do practice TRM have been ineffective with its system and policies. Thus, the gap between the experiences of these benefits that TRM promised opposed to the companies without TRM really don’t differ from one another. A possible reason for a defect in the system is the ineffective integration of TRM in the company’s practice or that improvement may not be sufficient to justify a shift towards a higher income and other socioeconomic benefits for employees. There are already attempts in giving benefits in this work of field yet proven to be defective and insignificant, these rewards are deemed impossible to implement because of the current health system. There are already policies that can potentially benefit these medical professionals but because of the shortage (shortage is caused by low salary as well), the implemented policies are turned to be defective and does almost or nearly nothing beneficial. </p>
+    <a href="https://actamedicaphilippina.upm.edu.ph/index.php/acta/article/view/4099" target="_blank">Total Rewards Management</a>
+    <p>2. There is obviously a duality in hospitals: those who can afford and those who cannot. It is obvious how private health cares provide better quality in most of the areas that public health cares lack of. As time passes, middle class couldn’t even afford in private hospitals due to the higher price ranges of services, meanwhile the most public hospitals continuously landslide in decline and decay, starved from the subsidy by the government. And with the Medicare or PhilHealth to cover only a small portion of the cost of service, this kind of system cannot stay the same in a matter of time. This would only lead to higher prices in health cares, continuous lack of improvement for public hospitals and a high risk in the community’s health care. There is a constant and dire need in these kinds of hospitals but most especially public ones as it has and needs to be very accessible to everyone of every kind of class. Managing and improving is a priority and must be considered instead of creating a temporary solution that can cause more damage on the problem/s itself.</p>
+    <a href="https://www.pressreader.com/philippines/business-world/20160328/282763470767956?srsltid=AfmBOooYT79l9QJwJKfp8RAMRdbySAMSVyMox23Z3aqsgFdH6vhjh18K" target="_blank">PH Healthcare System</a>
+    <p>3. Burnout is caused by many reasons as per this article; high workload, low rewards and in the likes. There are also other classified factors which are low nurse staffing levels, lack in schedule flexibility, and high job demand. Because of burnout, the effects of it are low job performance, poor quality care and intention to leave. In order for burnout to be subsided, such factors must be solved and draw out so it could cause less stress to the hard-working nurses. But with the number of factors and problems, it is hard to determine which must be in priority and which are tolerable, creating a servitude to address this issue can be challenging and difficult as the factors of burnout cannot be easily solve in just a small-time frame. It might take years of improvement and small steps to even fully subdue the problem. Implementing servitude can cause more problems because it can come with drastic changes which can lead to even more stress to adapt, to maintain a balance with burnout and the servitude to be implemented.</p>
+    <a href="https://link.springer.com/article/10.1186/s12960-020-00469-9" target="_blank">Burnout in Nursing</a>
     </div>
   </section>
 
