--- a/motion2.html
+++ b/motion2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>THBT medical professionals must give mandatory servitude.</title>
+  <title>THBT vaping should be banned</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
