--- a/motion1.html
+++ b/motion1.html
@@ -28,7 +28,7 @@
       
     <h4>Solves Shortages of Medical Professionals on rural parts of the country</h4>
     <p>Mandatory Servitude of Medical Professionals provides a solution to the shortages experienced of medical institutions all throughout the country. With a system that controls the density of Medical Professionals in a given community, less fortunate communities will still be able to have access to medical professionals. In many academic articles, it is said that the Philippines alone has a shortage of 190000 medical professionals and has a 1:25000 ratio to citizens than the recommended 1:10000. While this may be solved with having more medical professionals in the industry, a lot more of them can be placed in population dense or medically non-existent parts of the country. With more medical presence around the country, we could solve some shortages and even inspire more of our youth to become medical professionals.</p>
-    <a href="https://www.bloomberg.com/news/articles/2024-05-22/philippines-says-it-has-shortage-of-190-000-healthcare-workers" target="_blank">Healthcare workers shortage</a>
+    <a href="https://www.bloomberg.com/news/articles/2024-05-22/philippines-says-it-has-shortage-of-190-000-healthcare-workers" target="_blank">Healthcare workers shortage</a><br/>
     <a href="https://www.peoplemattersglobal.com/news/talent-management/philippines-faces-a-shortage-of-healthcare-workers-41481" target="_blank">Healthcare workers shortage 2</a>
       
     <h4>More equipped in resolving Public health crisis</h4>
