--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Debate Motions Search</title>
+  <title>Debate Motions</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Debate Motions</h1>
-  <input type="text" id="search-bar" placeholder="Enter a keyword" oninput="searchMotions()">
-  <ul id="results"></ul>
+  <div class="container">
+    <h1>Debate Motions</h1>
+    <p class="subtitle">Pick a side! </p>
+    <div class="search-container">
+      <input type="text" id="search-bar" placeholder="Enter a keyword" oninput="searchMotions()">
+    </div>
+    <ul id="results"></ul>
+  </div>
 
   <script src="motions.js"></script>
   <script src="search.js"></script>
