--- a/motion10.html
+++ b/motion10.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THBT upper class citizens should not be allowed in State Universities</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="motions.css">
 </head>
 <body>
   <h1>THBT upper class citizens should not be allowed in State Universities</h1>
