--- a/motion1.html
+++ b/motion1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THBT medical professionals must give mandatory servitude.</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="motions.css">
 </head>
 <body>
   <h1>THBT medical professionals must give mandatory servitude.</h1>
