--- a/motion12.html
+++ b/motion12.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THBT we should not allow importation of rice in the Philippines </title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="motions.css">
 </head>
 <body>
   <h1>THBT we should not allow importation of rice in the Philippines </h1>
