--- a/motion2.html
+++ b/motion2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THBT vaping should be banned</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="motions.css">
 </head>
 <body>
   <h1>THBT vaping should be banned</h1>
