--- a/motion3.html
+++ b/motion3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THBT jeepneys should be phased out</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="motions.css">
 </head>
 <body>
   <h1>THBT jeepneys should be phased out</h1>
