--- a/motion10.html
+++ b/motion10.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THBT upper class citizens should not be allowed in State Universities</title>
   <link rel="stylesheet" href="motions.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>THBT upper class citizens should not be allowed in State Universities</h1>
